<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">codigoalvo lousa</string>
    <string name="app_short_name">lousa</string>
    <string name="company_name">codigoalvo</string>
    <string name="action_settings">Configurações</string>
    <string name="from_camera">Adquirir imagem à partir da câmera</string>
    <string name="from_galery">Adquirir imagem à partir da galeria</string>
    <string name="select_picture">Selecione uma imagem</string>
    <string name="image_treatment">Tratamento de imagem</string>
    <string name="take_picture">Tirar Foto</string>
    <string name="erro_imagem_camera">Erro ao obter imagem da câmera</string>
    <string name="acao_cancelada_usuario">Ação cancelada pelo usuário</string>
    <string name="title_activity_segmentation">Segmentação da imagem</string>
    <string name="title_activity_about">Sobre</string>
    <string name="erro_salvar_seg">Erro ao salvar arquivo de segmentação</string>
    <string name="ok_salvar_seg">Arquivo temporario de segmentacao salvo com sucesso!</string>
    <string name="processing_segmentation">Processando segmentação</string>
    <string name="processing_image">Processando a imagem</string>
    <string name="preparing_image">Preparando a imagem</string>
    <string name="please_wait">Esta operação pode demorar! Por favor aguarde...</string>
    <string name="title_activity_settings">Configurações</string>
    <string name="confirmar">Confirmar</string>
    <string name="salvar">Salvar</string>
    <string name="cancelar">Cancelar</string>
    <string name="mudar">Mudar</string>
    <string name="fechar">Fechar</string>
    <string name="exibir_botoes">Exibir botões</string>
    <string name="limiar_contraste">Limiar de contraste</string>
    <string name="resolucao_maxima">Resolução máxima</string>
    <string name="pre_camera_extra_uri">Pré-configurar uri de camera</string>
    <string name="resultado_preto_branco">Resultado em preto e branco</string>
    <string name="sobre">Build info</string>
    <string name="focaand_email">codigoalvo@gmail.com</string>
    <string name="focaand_site">www.codigoalvo.com.br</string>
    <string name="sobre_focaand_lbl">Sobre focaAnd:</string>
    <string name="sobre_focaand_msg">focaAnd, um grupo criado com o propósito de desenvolver o TCC/IC (Trabalho de Colclusão de Curso / Iniciação Científica) do curso de Bacharelado em Ciência da Computação (Formandos de 2014).
        Composto pelos alunos: Cássio Reinaldo Amaral, Eduardo Rodrigues Sousa e Vitor Rossetto e orientado pelo professor Wonder Alexandre (Professor de Computação Gráfica)</string>
    <string name="sobre_lousa_lbl">Sobre Lousa:</string>
    <string name="sobre_lousa_msg">A idéia do app lousa surgiu da necessidade dos componentes do grupo. Pois desde o início do curso arquivamos a matéria passada pelos professores em sala de aula através de fotos tiradas do quadro verde de giz (lousa) com nossos celulares.
        Estas fotos além de ocupar muito espaço, não são conveniêntes a serem impressas ou visualizadas em tablets por exemplo. Aí surgiu a idéia de criarmos um aplicativo para aplicar filtros nas fotos tiradas, invertendo as cores e transformando a imagem final em algo próximo de um texto em tons de cinza em um fundo branco.
        Como nosso projeto caminhou para uma Iniciação Científica e não um simples TCC, fomos orientados pelo professor à direcionar nosso app como uma aplicação prática de um projeto de segmentação de imagens de outra iniciação científica.
        A segmentação de imagem teria o papel de eliminar das fotos partes não interessantes, como parede, moldura da lousa, etc, através de seleção de background/foreground desenhando imagens marcadoras sobre a foto.</string>

</resources>
